--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,30 @@
   --lightest-navy: #ccd6f6;
   --light-navy: #8892b0;
   --green: #64ffda;
+  --Yankees-Blue: #112240;
+  --light-Yankees-Blue: #a8b2d1;
   --navy-shadow: rgba(2, 12, 27, 0.7);
   --lato: "Lato", sans-serif;
   --ptfont: "PT Sans", sans-serif;
 }
 ::selection {
   /* background-color: #233554; */
-  background-color: var(--green);
+  background-color: var(--lightest-navy);
   color: var(--navy);
 }
+::-webkit-scrollbar {
+  width: 5px;
+  background: var(--navy);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--light-navy);
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+/* ::-webkit-scrollbar-corner {
+  background: #000;
+} */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -35,9 +50,8 @@ body.light {
   --navy: #eeeeee;
   --lightest-navy: #222831;
   --light-navy: #393e46;
-  --green: #00adb5;
+  --green: black;
+  --Yankees-Blue: white;
+  --light-Yankees-Blue: rgb(52, 42, 42);
   --navy-shadow: #393e46;
 }
-/* body.light ::selection{
-
-} */
